# tui-task-manager

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
app/core/: handlers.h
app/core/app/: models.h
app/core/controllers/: app_controller.h  modals_controller.h
app/core/storage/: models.h  storage.cpp  storage.h
app/core/utils/: report.h  time_format.h  transform.h  utils.h
app/ui/: footer.h  header.h  styles.h  utils.h
app/ui/components/: custom_input.h
app/ui/components/modals/: create_task_modal.h  delete_task_modal.h  edit_session_modal.h  edit_task_modal.h  modal_root.h  report_modal.h
app/ui/elements/: padding.h  separator.h  task_status_badge.h  text.h
app/ui/task_info_block/: description.h  sessions.h  task_info_block.h
app/ui/timesheet_list/: list_item.h  timesheets_list.h
